[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Gear_Icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/Bell_Icon.png" type="Texture" id=3]
[ext_resource path="res://scenes/AlarmModule.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/7segments.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/main_theme.theme" type="Theme" id=6]
[ext_resource path="res://scenes/HealthModule.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Heart_Icon.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.196078, 0.196078, 0.215686, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 5 )

[node name="BaseNode" type="PanelContainer"]
margin_right = 328.0
margin_bottom = 486.0
theme = ExtResource( 6 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 322.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DisplayModule" type="PanelContainer" parent="VBoxContainer"]
margin_right = 316.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/DisplayModule"]
margin_left = 4.0
margin_top = 4.0
margin_right = 312.0
margin_bottom = 70.0
size_flags_vertical = 3
custom_constants/margin_right = 3
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DisplayModule/MarginContainer"]
margin_left = 4.0
margin_top = 2.0
margin_right = 305.0
margin_bottom = 64.0
size_flags_vertical = 3
custom_constants/separation = 3

[node name="TimeLabel" type="Label" parent="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer"]
margin_right = 236.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "00:00:00"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabelBackground" type="Label" parent="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/TimeLabel"]
self_modulate = Color( 0, 0, 0, 0.196078 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "88:88:88"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer"]
margin_left = 239.0
margin_right = 301.0
margin_bottom = 62.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 2

[node name="ToggleAlarmButton" type="Button" parent="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/GridContainer"]
margin_right = 30.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 3 )

[node name="ToggleHealthButton" type="Button" parent="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/GridContainer"]
margin_left = 32.0
margin_right = 62.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="ToggleSettingsButton" type="Button" parent="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/GridContainer"]
margin_top = 32.0
margin_right = 30.0
margin_bottom = 62.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 1 )

[node name="TEST" type="Button" parent="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/GridContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 62.0
margin_bottom = 62.0
focus_mode = 0
enabled_focus_mode = 0

[node name="AlarmModule" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 78.0
margin_right = 316.0
margin_bottom = 212.0

[node name="HealthModule" parent="VBoxContainer" instance=ExtResource( 7 )]
margin_top = 216.0
margin_right = 316.0
margin_bottom = 354.0

[node name="SettingsBase" type="PanelContainer" parent="VBoxContainer"]
margin_top = 358.0
margin_right = 316.0
margin_bottom = 474.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SettingsBase"]
margin_left = 4.0
margin_top = 4.0
margin_right = 312.0
margin_bottom = 112.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SettingsBase/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 298.0
margin_bottom = 98.0
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 26.0
custom_constants/separation = 10

[node name="ChimeLabel" type="Label" parent="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 6.0
margin_right = 45.0
margin_bottom = 20.0
text = "Chime:"

[node name="ToggleHourChime" type="CheckBox" parent="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 55.0
margin_right = 166.0
margin_bottom = 26.0
focus_mode = 0
size_flags_horizontal = 3
shortcut_in_tooltip = false
pressed = true
text = "Hourly "
align = 2

[node name="ToggleHalfHourChime" type="CheckBox" parent="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 176.0
margin_right = 288.0
margin_bottom = 26.0
focus_mode = 0
size_flags_horizontal = 3
shortcut_in_tooltip = false
pressed = true
text = "Half-Hourly "
align = 2

[node name="ToggleTopWindow" type="CheckBox" parent="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 288.0
margin_bottom = 62.0
focus_mode = 0
size_flags_horizontal = 3
custom_constants/hseparation = 21
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
text = "Keep Window On Top "
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 288.0
margin_bottom = 88.0
custom_constants/separation = 10

[node name="FontSizeLabel" type="Label" parent="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 113.0
margin_bottom = 15.0
text = "Display Size (%d):"

[node name="FontSizeSlider" type="HSlider" parent="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 288.0
margin_bottom = 16.0
focus_mode = 1
size_flags_horizontal = 3
min_value = 32.0
step = 2.0
value = 48.0

[node name="Timer" type="Timer" parent="."]

[connection signal="new_minute" from="." to="VBoxContainer/AlarmModule" method="_on_BaseNode_new_minute"]
[connection signal="new_minute" from="." to="VBoxContainer/HealthModule" method="_on_BaseNode_new_minute"]
[connection signal="toggled" from="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/GridContainer/ToggleAlarmButton" to="." method="_on_ToggleAlarmButton_toggled"]
[connection signal="toggled" from="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/GridContainer/ToggleHealthButton" to="." method="_on_ToggleHealthButton_toggled"]
[connection signal="toggled" from="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/GridContainer/ToggleSettingsButton" to="." method="_on_ToggleSettingsButton_toggled"]
[connection signal="pressed" from="VBoxContainer/DisplayModule/MarginContainer/HBoxContainer/GridContainer/TEST" to="." method="_on_TEST_pressed"]
[connection signal="night_mode_active" from="VBoxContainer/HealthModule" to="." method="_on_HealthModule_night_mode_active"]
[connection signal="toggled" from="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer2/ToggleHourChime" to="." method="_on_ToggleHourChime_toggled"]
[connection signal="toggled" from="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer2/ToggleHalfHourChime" to="." method="_on_ToggleHalfHourChime_toggled"]
[connection signal="toggled" from="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/ToggleTopWindow" to="." method="_on_ToggleTopWindow_toggled"]
[connection signal="gui_input" from="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer/FontSizeSlider" to="." method="_on_FontSizeSlider_gui_input"]
[connection signal="value_changed" from="VBoxContainer/SettingsBase/MarginContainer/VBoxContainer/HBoxContainer/FontSizeSlider" to="." method="_on_FontSizeSlider_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
